--- a/mystyle.css
+++ b/mystyle.css
@@ -188,7 +188,7 @@ body {
 }
 
 .Question_Header1,.Question_Header2,.Question_Header3,.Question_Header4,.Question_Header5,.Question_Header6,.Question_Header7{
-	font-size: 2.4rem;
+	font-size: 2.2em;
 /*	margin: 0.5em 0;*/
 
 }
