--- a/mystyle.css
+++ b/mystyle.css
@@ -4,6 +4,7 @@ body {
 			color: black;
 			margin: 0;
 			padding: 0;
+			height: 100vh;
 		}
 
 		#page_intro {
@@ -155,9 +156,9 @@ body {
     flex-direction: row;
     border: 2px solid #2EC4B6; 
     border-radius: 20px;
-    font-size:2.3em; 
-    margin-bottom: -120px; 
-    margin-top: -120px;
+    font-size:2em; 
+/*    margin-bottom: -120px; */
+/*    margin-top: -120px;*/
     width: 90%;
     height:70px;
     cursor: pointer;
@@ -188,7 +189,7 @@ body {
 }
 
 .Question_Header1,.Question_Header2,.Question_Header3,.Question_Header4,.Question_Header5,.Question_Header6,.Question_Header7{
-	font-size: 2.2em;
+	font-size: 2em;
 /*	margin: 0.5em 0;*/
 
 }
