--- a/mystyle.css
+++ b/mystyle.css
@@ -150,8 +150,8 @@ body {
 #q5a1,#q5a2,#q5a3,#q5a4,#q5a5,
 #q6a1,#q6a2,#q6a3,#q6a4,#q6a5,
 #q7a1,#q7a2,#q7a3,#q7a4,#q7a5 {
-	display: flex; 
-    justify-content: space-evenly; 
+	display: inherit; 
+/*    justify-content: space-around; */
     align-items: center;
     flex-direction: row;
     border: 2px solid #2EC4B6; 
@@ -163,6 +163,7 @@ body {
     height:65px;
     cursor: pointer;
     color:black;
+    text-align: left;
     /*border: 1px solid red;*/
 
 
@@ -265,6 +266,7 @@ border: 1px solid red;
 		}
 
 #progress1,#progress2,#progress3,#progress4,#progress5,#progress6,#progress7 {
+/*	margin-bottom: 10px;*/
     background: #333;
     border-radius: 13px;
     height: 30px;
